# confbot_robot

./: .travis.yml  README.md  commands_hog.txt
.travis/: Dockerfile  ci_script.bash
confbot_bringup/: CMakeLists.txt  package.xml
confbot_bringup/config/: confbot.rviz  confbot_bringup_qt.perspective
confbot_bringup/launch/: confbot_bringup.launch.py  confbot_bringup_activated.launch.py  confbot_bringup_no_components.launch.py  confbot_state_publisher.launch.py
confbot_description/: CMakeLists.txt  README.md  package.xml
confbot_description/meshes/: Shark_t.stl  confbot.dae
confbot_description/urdf/: confbot.urdf
confbot_driver/: CMakeLists.txt  package.xml
confbot_driver/include/confbot_driver/: confbot_driver.hpp  twist_publisher.hpp
confbot_driver/include/confbot_driver/nodes/: confbot_driver.hpp  twist_publisher.hpp
confbot_driver/resources/: ros1_cmd_vel.bag
confbot_driver/resources/ros2_cmd_vel_bag/: metadata.yaml  ros2_cmd_vel_bag.db3
confbot_driver/src/: confbot_actionclient.cpp  confbot_all.cpp  confbot_driver.cpp  confbot_driver_main.cpp  twist_publisher.cpp  twist_publisher_main.cpp
confbot_driver/src/nodes/: confbot_driver.cpp  twist_publisher.cpp
confbot_msgs/: CMakeLists.txt  package.xml
confbot_msgs/action/: MoveCommand.action
confbot_security/: CMakeLists.txt  package.xml  path_publisher_policy.yaml  safe_zone_publisher_policies.xml  safe_zone_publisher_policies.yaml
confbot_security/confbot_keystore/: 1000.pem  1001.pem  1002.pem  1003.pem  1005.pem  1006.pem  ca.cert.pem  ca.key.pem  governance.xml  index.txt  index.txt.old
confbot_security/confbot_keystore/confbot_driver/: cert.pem  key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_security/confbot_keystore/confbot_laser/: cert.pem  key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_security/confbot_keystore/launch_ros/: governance.p7s  key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_security/confbot_keystore/path_publisher/: cert.pem  key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_security/confbot_keystore/pub_vel/: key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_security/confbot_keystore/robot_state_publisher/: cert.pem  key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_security/confbot_keystore/rviz/: key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_security/confbot_keystore/safe_zone_publisher/: cert.pem  key.pem  permissions.p7s  permissions.xml  permissions_ca.cert.pem  req.pem  request.cnf
confbot_security/confbot_keystore/twist_publisher/: cert.pem  key.pem  permissions.p7s  permissions.xml  req.pem  request.cnf
confbot_sensors/: CMakeLists.txt  package.xml
confbot_sensors/include/confbot_sensors/: confbot_laser.hpp
confbot_sensors/include/confbot_sensors/nodes/: confbot_laser.hpp
confbot_sensors/src/: confbot_laser.cpp  confbot_laser_main.cpp
confbot_sensors/src/nodes/: confbot_laser.cpp
confbot_simulation/: CMakeLists.txt  package.xml
confbot_simulation/confbot_simulation/: urdf_spawner.py
confbot_simulation/config/: config_gazebo.rviz
confbot_simulation/launch/: empty_world.launch.py
confbot_simulation/world/: basic_world.world
confbot_tools/: package.xml  pytest.ini  setup.cfg  setup.py
confbot_tools/confbot_tools/: path_publisher.py  path_publisher_hacked.py  safe_zone_publisher.py  safe_zone_publisher_hacked.py
docker/: Dockerfile  build.sh  ros_entrypoint.sh
travis/: Dockerfile  travis_entrypoint.sh  workspace.repos
tutorial/: Linux_Tutorial.md
