<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>confbot_security</name>
  <version>0.0.0</version>
  <description>confbot_security package used to generate security artifact for the confbot robot</description>
  <maintainer email="mikael.arguedas@gmail.com">Mikael Arguedas</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>sros2_cmake</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
